Fixed: overflow main

--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 
-/* General */
+/* General Layout */
+
+header {
+    
+    height: 2.5rem;
+    margin: 1.25rem 0 1.25rem 0;  
+}
 
 main {
-    height: calc(100vh - 60px);
-
+    height:calc(100vh - 5rem);
+    overflow-y: auto;
 }
 
 aside {
+    min-height: calc(100vh - 5rem);
     min-width: 4rem;
     background-color: #021e34;
     background-image: url(img/sidebar-bg.png);
